# hypertable

./: .gitignore  CHANGES  CMakeLists.txt  README.md
cmake/: CheckBdb.cc  (+55 more)
contrib/cc/PythonBinding/: CMakeLists.txt  HypertableBindings.h
contrib/cc/pam_hypertable/: CMakeLists.txt  README.md  pam_ht_maxretries.cc  pam_ht_test.c
src/: CMakeLists.txt
src/cc/AsyncComm/: ApplicationHandler.h  ApplicationQueue.h  ApplicationQueueInterface.h  CMakeLists.txt  Clock.h  Comm.cc  Comm.h  CommAddress.cc  CommAddress.h  CommBuf.h  CommHeader.cc  CommHeader.h  Config.cc  Config.h  ConfigHandler.cc  ConfigHandler.h  ConnectionHandlerFactory.h  ConnectionInitializer.h  ConnectionManager.cc  ConnectionManager.h  DispatchHandler.h  DispatchHandlerSynchronizer.cc  DispatchHandlerSynchronizer.h  Event.cc  Event.h  ExpireTimer.h  HandlerMap.cc  HandlerMap.h  IOHandler.cc  IOHandler.h  IOHandlerAccept.cc  IOHandlerAccept.h  IOHandlerData.cc  IOHandlerData.h  IOHandlerDatagram.cc  IOHandlerDatagram.h  IOHandlerRaw.cc  IOHandlerRaw.h  PollEvent.cc  PollEvent.h  (+18 more)
src/cc/AsyncComm/tests/: CommTestDatagramThreadFunction.cc  CommTestDatagramThreadFunction.h  CommTestThreadFunction.cc  CommTestThreadFunction.h  commTest.cc  commTestDatagram.cc  commTestReverseRequest.cc  commTestTimeout.cc  commTestTimer.cc
src/cc/Common/: Allocator.h  Barrier.h  Base64.cc  Base64.h  BlobHashSet.h  BlobHashTraits.h  BloomFilter.h  BloomFilterWithChecksum.h  ByteString.h  CMakeLists.txt  Checksum.cc  Checksum.h  ClusterDefinition.cc  ClusterDefinition.h  Config.cc  Config.h  ConsoleOutputSquelcher.cc  ConsoleOutputSquelcher.h  Cronolog.cc  Cronolog.h  Crontab.cc  Crontab.h  Crypto.cc  Crypto.h  CstrHashMap.h  CstrHashTraits.h  DiscreteRandomGenerator.cc  DiscreteRandomGenerator.h  DiscreteRandomGeneratorFactory.cc  DiscreteRandomGeneratorFactory.h  DiscreteRandomGeneratorUniform.h  DiscreteRandomGeneratorZipf.cc  DiscreteRandomGeneratorZipf.h  DynamicBuffer.h  Error.cc  Error.h  Escaper.cc  Escaper.h  FailureInducer.cc  FailureInducer.h  (+90 more)
src/cc/Common/ClusterDefinition/: CMakeLists.txt
src/cc/Common/ClusterDefinitionFile/: CMakeLists.txt  Compiler.cc  Compiler.h  ToJson.cc  ToJson.h  Token.cc  Token.h  Tokenizer.cc  Tokenizer.h  TokenizerTools.cc  TokenizerTools.h  TranslationContext.h  Translator.h  TranslatorCode.cc  TranslatorCode.h  TranslatorRole.cc  TranslatorRole.h  TranslatorTask.cc  TranslatorTask.h  TranslatorVariable.cc  TranslatorVariable.h
src/cc/Common/tests/: Base64_test.cc  Crypto_test.cc  Serializable_test.cc  TimeWindowTest.cc  bloom_filter_test.cc  code_search_and_replace.cc  config_test.cc  container_test.cc  crontab_test.cc  directory_test.cc  directory_test.golden  escaper_test.cc  exception_test.cc  failure_inducer_test.cc  hash_test.cc  inetaddr_test.cc  init_test.cc  init_test.golden  logging_test.cc  md5_base64_test.cc  mutex_test.cc  pagearena_test.cc  properties_parser_test.cc  properties_parser_test.cfg  properties_parser_test.golden  properties_test.cc  properties_test.golden  scope_guard_test.cc  sertest.cc  stats_serialize_test.cc  string_compressor_test.cc  timeinline_test.cc
src/cc/FsBroker/Lib/: Broker.h  CMakeLists.txt  Client.cc  Client.cc_draft.cc  Client.h  Client.h_draft.h  ClientBufferedReaderHandler.cc  ClientBufferedReaderHandler.h  ClientOpenFileMap.h  Config.cc  Config.h  ConnectionHandler.cc  ConnectionHandler.h  ConnectionHandlerFactory.h  FileDevice.cc  FileDevice.h  MetricsHandler.cc  MetricsHandler.h  OpenFileMap.h  StatusManager.cc  StatusManager.h  Utility.cc  Utility.h
src/cc/FsBroker/ceph/: CMakeLists.txt  CephBroker.cc  CephBroker.h  main.cc
src/cc/FsBroker/local/: CMakeLists.txt  LocalBroker.cc  LocalBroker.h  main.cc
src/cc/FsBroker/mapr/: CMakeLists.txt  MaprBroker.cc  MaprBroker.h  main.cc
src/cc/FsBroker/qfs/: CMakeLists.txt  QfsBroker.cc  QfsBroker.h  main.cc
src/cc/HyperAppHelper/: CMakeLists.txt  Error.h  Unique.cc  Unique.h
src/cc/HyperAppHelper/tests/: error_test.cc  unique_test.cc
src/cc/HyperPython/: CMakeLists.txt  SerializedCells.cc  SerializedCellsMin.cc  SerializedCells_pyBind11.cc
src/cc/Hyperspace/: BerkeleyDbFilesystem.cc  BerkeleyDbFilesystem.h  CMakeLists.txt  ClientConnectionHandler.cc  ClientConnectionHandler.h  ClientHandleState.h  ClientKeepaliveHandler.cc  ClientKeepaliveHandler.h  Config.cc  Config.h  DbtManaged.h  DirEntry.cc  DirEntry.h  DirEntryAttr.cc  DirEntryAttr.h  Event.cc  Event.h  FileHandleCallback.h  HandleCallback.cc  HandleCallback.h  HsClientState.cc  HsClientState.h  HsCommandInterpreter.cc  HsCommandInterpreter.h  HsHelpText.cc  HsHelpText.h  HsParser.h  LockSequencer.h  Master.cc  Master.h  MetricsHandler.cc  MetricsHandler.h  Notification.h  Protocol.cc  Protocol.h  ServerConnectionHandler.cc  ServerConnectionHandler.h  ServerKeepaliveHandler.cc  ServerKeepaliveHandler.h  Session.cc  (+5 more)
src/cc/ThriftBroker/: CMakeLists.txt  Client.h  Client.thrift  Config.cc  Config.h  Hql.thrift  MetricsHandler.cc  MetricsHandler.h  SerializedCellsFlag.h  SerializedCellsReader.cc  SerializedCellsReader.h  SerializedCellsWriter.cc  SerializedCellsWriter.h  ThriftBroker.cc  ThriftHelper.cc  ThriftHelper.h
src/cc/Tools/: CMakeLists.txt
src/java/: CMakeLists.txt  pom.xml.in
src/java/ThriftClient/: CMakeLists.txt
src/java/hadoop_distro/: apache.cmake  cdh.cmake
src/java/hypertable/: pom.xml.in
src/java/hypertable-common/: pom.xml.in
src/java/hypertable-examples/: pom.xml.in
src/java/mvn/: assembly.xml  pom.xml.in
src/java/runtime-dependencies/: pom.xml.in
src/js/: CMakeLists.txt
src/perl/ThriftClient/: CMakeLists.txt  client_test.pl
src/php/ThriftClient/: CMakeLists.txt  ThriftClient.php  client_test.php
src/py/ThriftClient/: CMakeLists.txt  client_test.py  setup.py.in
src/py/ht-package/: CMakeLists.txt  MANIFEST.in  README.txt  client_test.py  client_test_scr.py  client_test_scw.py  requirements.txt  requirements.txt.in  setup.py.in
src/py/libpyhypertable/: CMakeLists.txt  readme.md  setup.py
src/rb/Monitoring/: CMakeLists.txt  htmonitoring.rb
src/rb/ThriftClient/: CMakeLists.txt
(+1696 files in other folders)
