# CMake file for hypertable source

add_subdirectory(cc/Common)
add_subdirectory(cc/HyperAppHelper)
add_subdirectory(cc/ThirdParty)
add_subdirectory(cc/AsyncComm)
add_subdirectory(cc/Hyperspace)
add_subdirectory(cc/Hypertable)
add_subdirectory(cc/Tools)
add_subdirectory(cc/FsBroker/Lib)
add_subdirectory(cc/FsBroker/local)

add_subdirectory(py/ganglia)
add_subdirectory(rb/Monitoring)

if (LANGS OR LANG_PY2 OR LANG_PY3 OR LANG_PYPY2 OR LANG_PYPY3)
  if (PYTHONTHRIFT_FOUND AND (PYTHON2_FOUND OR PYTHON3_FOUND OR PYPY2_FOUND OR PYPY3_FOUND))
    add_subdirectory(cc/HyperPython)
  endif ()
endif ()

# THRIFT CLIENTS
if (Thrift_FOUND)
  add_subdirectory(cc/ThriftBroker)
  
  if (LANGS OR LANG_JAVA OR Hdfs_FOUND)
    add_subdirectory(java/ThriftClient)
  endif ()
  if (LANGS OR LANG_JS)
    add_subdirectory(js)
  endif ()
  if (LANGS OR LANG_RB)
    add_subdirectory(rb/ThriftClient)
  endif ()
  if (LANGS OR LANG_PL)
	add_subdirectory(perl/ThriftClient)
  endif ()
  if (LANGS OR LANG_PY2 OR LANG_PY3 OR LANG_PYPY2 OR LANG_PYPY3)
    add_subdirectory(py/ThriftClient)
  endif ()
  if (LANGS OR LANG_PHP)
   add_subdirectory(php/ThriftClient)
  endif ()
endif ()


# DISTRIBUTES FILE SYSTEMS
if (Ceph_FOUND)
   add_subdirectory(cc/FsBroker/ceph)
endif ()

if (Mapr_FOUND)
   add_subdirectory(cc/FsBroker/mapr)
endif ()

if (Qfs_FOUND)
   add_subdirectory(cc/FsBroker/qfs)
endif ()

add_subdirectory(java)

